# bwreilly.github.io

./: README.md  atom.xml  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  rest-uploads.html  resume.html  resume.json  robots.txt  search-django-testing.html  sitemap.xml  tags.html
author/: ben-reilly.html
blog/archives/: index.html
blog/categories/access/: atom.xml  index.html
blog/categories/ai/: atom.xml  index.html
blog/categories/algorithms/: atom.xml  index.html
blog/categories/api/: atom.xml  index.html
blog/categories/balance/: atom.xml  index.html
blog/categories/datamodel/: atom.xml  index.html
blog/categories/django/: atom.xml  index.html
category/: organization.html  software.html
content/articles/: Conways-Law-and-The-Ecology-of-Freedom.md  crunch-mode-does-not-work.md  leader-values.md  rest-file-uploads.md  testing-search-haystack-django.md  why-not-open-offices.md
feeds/: organization.atom.xml  software.atom.xml
output/: archives.html  authors.html  categories.html  conway-ecology.html  crunch-mode.html  index.html  rest-uploads.html  search-django-testing.html  tags.html
output/author/: ben-reilly.html
output/category/: organization.html  software.html
output/drafts/: leadership-values.html  rest-uploads.html
output/feeds/: all.atom.xml
output/tag/: code.html  history.html  rest.html  search.html  social-science.html  software.html  testing.html  web.html
resume/: index.html
stylesheets/: screen.css
tag/: code.html  history.html  search.html  web.html
(+62 files in other folders)
